<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textColor="#000000"
            android:textSize="20dp"
            android:text = "@string/pCapture"
            android:id = "@+id/bPCapture"
            android:onClick = "btnPClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:text = "@string/pViewer"
            android:id = "@+id/bPViewer"
            android:onClick = "btnPClick"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:text = "@string/pDelete"
            android:id = "@+id/bPDelete"
            android:onClick = "btnPClick"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:textColor="#000000"
            android:textSize="20dp"
            android:text = "@string/setting"
            android:id = "@+id/bSetting"
            android:onClick = "btnPClick"/>
    </LinearLayout>
</LinearLayout>